GitVersion1/objects/Visit_Report__c.object
<CustomObject>
    <fields>
        <fullName>Complaint_Raised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complaint Raised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <label>Event ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Call_Notes__c</fullName>
        <label>External Call Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Event Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Call_Notes__c</fullName>
        <label>Internal Call Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pork</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Ruminants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Event__c</fullName>
        <label>Related Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Noah</fullName>
                </value>
                <value>
                    <fullName>Baxter</fullName>
                </value>
                <value>
                    <fullName>Dennis</fullName>
                </value>
                <value>
                    <fullName>Sonya</fullName>
                </value>
                <value>
                    <fullName>Kobe</fullName>
                </value>
                <value>
                    <fullName>Walton</fullName>
                </value>
                <value>
                    <fullName>Spence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <label>Visit Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Event_ID__c</columns>
        <columns>Related_Event__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>External_Call_Notes__c</columns>
        <columns>Internal_Call_Notes__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Line__c</field>
            <operation>equals</operation>
        </filters>
        <label>Doug - External Event Id</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Integration_Mobile</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Event_ID__c</columns>
        <columns>Related_Event__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>External_Call_Notes__c</columns>
        <columns>Internal_Call_Notes__c</columns>
        <columns>External_Event_Id__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Integration Mobile</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Event_ID__c</columns>
        <columns>Related_Event__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>External_Call_Notes__c</columns>
        <columns>Internal_Call_Notes__c</columns>
        <filterScope>Mine</filterScope>
        <label>My</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Visit Report ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>